book-form component で card.component を importして、app-card をバインドするように変更しました。

--- a/intern-book-app/src/app/book-form/book-form.component.html
+++ b/intern-book-app/src/app/book-form/book-form.component.html
@@ -22,10 +22,14 @@
     <button type="button" class="add" (click)="addBook()">追加</button>
 </div>
 
-<mat-card *ngFor="let book of bookList">
+<!-- <mat-card *ngFor="let book of bookList">
     <mat-card-title>{{ book.title }}</mat-card-title>
     <mat-card-content>
         <p>{{ book.summary }}</p>
         <p>評価: {{ book.rating }}点</p>
     </mat-card-content>
-</mat-card>
+</mat-card> -->
+
+
+<!-- bookListにある本のデータを1つずつ取り出してapp-cardコンポーネントに渡して、繰り返し表示する -->
+<app-card *ngFor="let book of bookList" [book]="book"></app-card>
